# ask

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/ask/: __init__.py  __main__.py
src/chat/: chat.py
src/simple_chatgpt/: __init__.py  __main__.py  ask.py  commit_message_generator.py  gitcm.py  review.py
