[project]
name = "chatgpt-ask"
version = "0.0.1"
authors = [
  { name="Egon Firman", email="egon.firman@gmail.com" },
]
description = "Executeable to ask to chatgpt"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["openai>=0.27.6", "hatchling"]
build-backend = "hatchling.build"
