# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-chatgpt"
version = "0.0.1"
authors = [
  { name="Egon Firman", email="egon.firman@gmail.com" },
]
description = "Simple Answering Question using GPT-3"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "openai >= 0.27.8",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/egon12/ask"
"Bug Tracker" = "https://github.com/egon12/ask/issues"

[project.scripts]
ask = "simple_chatgpt.__main__:main"
