# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-chatgpt"
version = "0.0.3"
authors = [
  { name="Egon Firman", email="egon.firman@gmail.com" },
]
description = "Simple Answering Question using GPT-3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai >= 2.34.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/egon12/ask"
"Bug Tracker" = "https://github.com/egon12/ask/issues"

[project.scripts]
ask = "simple_chatgpt.__main__:main"
review = "simple_chatgpt.review:main"
git-cm = "simple_chatgpt.gitcm:main"
chat   = "chat.chat:just_chat"
rchat  = "chat.chat:rchat"

